--- a/ns/templates/fwd_zone.j2
+++ b/ns/templates/fwd_zone.j2
@@ -1,6 +1,6 @@
 $TTL    604800
 @       IN      SOA     mylabserver.com. root.localhost. (
-                  3     ; Serial
+       {{ serial }}     ; Serial
              604800     ; Refresh
               86400     ; Retry
             2419200     ; Expire
