--- a/ns/templates/named.conf.local.j2
+++ b/ns/templates/named.conf.local.j2
@@ -1,14 +1,28 @@
 {% for domain_zone in domain_zones %}
 
 zone {{ domain_zone.name }} {
+    {% if domain_zone.type == "master" %}
     type master;
+    {% elif domain_zone.type == "slave" %}
+    type slave;
+    masters {
+      {{ master }};
+    };
+    {% endif %}
     file "{{ zones_dir }}/db.{{ domain_zone.name }}";
     allow-transfer { localhost; };
     allow-query { any };
 };
 
 zone "{{ domain_zone.reverse }}.in-addr.arpa" {
+    {% if domain_zone.type == "master" %}
     type master;
+    {% elif domain_zone.type == "slave" %}
+    type slave;
+    masters {
+      {{ master }};
+    };
+    {% endif %}
     file "{{ zones_dir }}/db.{{ domain_zone.reverse }}";
     allow-transfer { localhost; };
     allow-query { any };
