--- a/ns/templates/fwd_zone.j2
+++ b/ns/templates/fwd_zone.j2
@@ -1,4 +1,4 @@
-; {{ ansible_managed }} 
+; {{ ansible_managed }}
 
 $TTL    {{ bind_zone_ttl }}
 @       IN      SOA     mylabserver.com. root.localhost. (
@@ -17,4 +17,4 @@ andynottingham2c.mylabserver.com.          IN      A       172.31.22.124
 ; 172.31.0.0/16 - A records
 andynottingham3c.mylabserver.com.          IN      A       172.31.27.172
 andynottingham4c.mylabserver.com.          IN      A       172.31.29.20
-
+fake.myfakeserverc.com.                    IN      A       8.8.8.8
