--- a/ns/templates/named.conf.local.j2
+++ b/ns/templates/named.conf.local.j2
@@ -1,40 +1,33 @@
-key "mylabserver.com." {
+key "{{ dns_key_name }}" {
   algorithm hmac-md5;
-  secret 
-"ptpTJAdNrUS3NfNDsDSGHgIml1R5LQhpTlYlqagxe0/FgN+3/rYHFR6SBYrOV1tyJPBCjw9+a19foc1R2++DMg==";
+  secret "{{ dns_key_secret }}";
 };
 
-
-# {{ ansible_managed }}
 {% for domain_zone in domain_zones %}
 
 zone {{ domain_zone.name }} {
-  {% if domain_zone.type == "master" %} 
+{% if domain_zone.type == "master" %} 
   type master;
-  {% elif domain_zone.type == "slave" %} 
+{% elif domain_zone.type == "slave" %} 
   type slave;
-    masters {
-      {{ domain_zone.master }};
-    };
-  allow-update { {{ ansible_default_ipv4.address }}; key "mylabserver.com."; };
-  {% endif %}
+  masters {
+  {{ domain_zone.master }};
+  };
+{% endif %}
   file "{{ zones_dir }}/db.{{ domain_zone.name }}";
-  allow-transfer { localhost; };
+  allow-update { key "{{ dns_key_name }}"; };
 };
 
 zone "{{ domain_zone.reverse }}.in-addr.arpa" {
-  {% if domain_zone.type == "master" %}
+{% if domain_zone.type == "master" %}
   type master;
-  {% elif domain_zone.type == "slave" %}
+{% elif domain_zone.type == "slave" %}
   type slave;
-    masters {
-      {{ domain_zone.master }};
-    };
-
-  allow-update { {{ ansible_default_ipv4.address }}; key "mylabserver.com."; };
-  {% endif %}
+  masters {
+  {{ domain_zone.master }};
+  };
+{% endif %}
   file "{{ zones_dir }}/db.{{ domain_zone.reverse }}";
-  allow-transfer { localhost; };
+  allow-update { key "{{ dns_key_name }}."; };
 };
-
 {% endfor %}
