--- a/ns/templates/fwd_zone.j2
+++ b/ns/templates/fwd_zone.j2
@@ -6,7 +6,7 @@ $TTL    {{ bind_zone_ttl }}
       {{ bind_zone_refresh }}    ; Refresh
       {{ bind_zone_retry }}      ; Retry
       {{ bind_zone_expire }}     ; Expire
-      {{ bind_zone_min_ttl }} )  ; Negative Cache TTL
+      {{ bind_zone_neg_ttl }} )  ; Negative Cache TTL
 ;
 ; name servers - NS records
      IN      NS      andynottingham2c.mylabserver.com.
@@ -17,4 +17,3 @@ andynottingham2c.mylabserver.com.          IN      A       172.31.22.124
 ; 172.31.0.0/16 - A records
 andynottingham3c.mylabserver.com.          IN      A       172.31.27.172
 andynottingham4c.mylabserver.com.          IN      A       172.31.29.20
-fake.myfakeserverc.com.                    IN      A       8.8.8.8
