--- a/ns/templates/named.conf.j2
+++ b/ns/templates/named.conf.j2
@@ -9,3 +9,7 @@
 include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
 include "/etc/bind/named.conf.default-zones";
+{% for zone in bind_domain_zones %}
+include "/etc/bind/named.conf.options.keys.{{ zone.name }}";
+{% endfor %}
+
