--- a/ns/templates/named.conf.options.keys.j2
+++ b/ns/templates/named.conf.options.keys.j2
@@ -1,9 +1,8 @@
+{% for zone in bind_domain_zones %}
 
-{% for zone.name in bind_domain_zones %}
-{% if item.item.name == zone.name %}
 key "{{ zone.name }}" {
    algorithm hmac-md5;
 	 secret "{{ item.stdout }}";
 };
-{% endif %}
+
 {% endfor %}
