--- a/ns/templates/named.conf.j2
+++ b/ns/templates/named.conf.j2
@@ -10,6 +10,6 @@ include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
 include "/etc/bind/named.conf.default-zones";
 {% for zone in bind_domain_zones %}
-include "/etc/bind/named.conf.options.keys.{{ zone.name }}";
+include "/etc/bind/keys/named.conf.keys.{{ zone.name }}";
 {% endfor %}
 include "/etc/bind/named.conf.log";
